[project]
name = "eevb"
version = "0.1.0"
description = "EEVB simplifies Enigma Virtual Box command-line usage by building virtualized executables via a JSON configuration file."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pydantic>=2.11.7"]

[project.scripts]
eevb = "eevb.__main__:main"

[tool.setuptools.package-data]
eevb = ["data/*"]

[tool.black]
line-length = 120
